--- a/package.json
+++ b/package.json
@@ -22,11 +22,23 @@
       "explorer/context": [
         {
           "when": "explorerResourceIsFolder",
+          "group": "navigation",
+          "submenu": "reactDeveloperToolkit"
+        }
+      ],
+      "reactDeveloperToolkit": [
+        {
           "command": "vscode-react-developer-toolkit.createReactComponent",
-          "group": "vscode-react-developer-toolkit@1"
+          "group": "1_create"
         }
       ]
-    }
+    },
+    "submenus": [
+      {
+        "id": "reactDeveloperToolkit",
+        "label": "React Developer Toolkit"
+      }
+    ]
   },
   "scripts": {
     "vscode:prepublish": "pnpm run compile",
@@ -37,14 +49,16 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.94.0",
     "@types/mocha": "^10.0.9",
     "@types/node": "20.x",
+    "@types/sinon": "^17.0.3",
+    "@types/vscode": "^1.94.0",
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.7.0",
-    "eslint": "^9.13.0",
-    "typescript": "^5.6.3",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.13.0",
+    "sinon": "^19.0.2",
+    "typescript": "^5.6.3"
   }
 }
