Update: Updated release script

--- a/.github/workflows/release-extension.yml
+++ b/.github/workflows/release-extension.yml
@@ -16,16 +16,28 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: "20"
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.x
+
+      - name: Cache dependencies
+        id: cache-dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: pnpm install
 
-      - name: Run tests
-        run: pnpm test
-
       - name: Package extension
-        run: vsce package
+        run: pnpm vscode:prepublish && pnpm vsce:package
 
       - name: Publish to Marketplace
         env:
